--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 
 .App {
   text-align: center;
+  background-color: rgba(var(--b3f,250,250,250),1);
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .App-logo {
