--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -17,11 +17,29 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
+.nav-icons{
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+}
 
 .nav-icon{
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
+}
+
+.search input{
+    padding: 3px 18px;
+    width: 215px;
+    font-size: 0.9rem;
+}
+
+.insta-logo{
+margin-top: 7px;
+}
+
+.navs ul{
+    list-style: none;
 }
